--- a/Server/package.json
+++ b/Server/package.json
@@ -12,7 +12,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/cors": "^2.8.13",
 		"axios": "^1.4.0",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"mongodb": "^5.5.0",
